Added some more HTML

--- a/snake.html
+++ b/snake.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    Ride the Snake! The West is the Best!
+    <canvas id="gameCanvas" width "300" height="300"></canvas>
+    <script>
+    </script>
 </body>
 
 </html>
