Added even more HTML

--- a/snake.html
+++ b/snake.html
@@ -11,6 +11,7 @@
 <body>
     <canvas id="gameCanvas" width "300" height="300"></canvas>
     <script>
+        /** CONSTANTS **/
     </script>
 </body>
 
