Added even more HTML still

--- a/snake.html
+++ b/snake.html
@@ -12,6 +12,8 @@
     <canvas id="gameCanvas" width "300" height="300"></canvas>
     <script>
         /** CONSTANTS **/
+        const CANVAS_BORDER_COLORUR = 'black';
+        const CANVAS_BACKGROUND_COLORUR = 'white';
     </script>
 </body>
 
