Fixed some HTML spelling

--- a/snake.html
+++ b/snake.html
@@ -12,8 +12,17 @@
     <canvas id="gameCanvas" width "300" height="300"></canvas>
     <script>
         /** CONSTANTS **/
-        const CANVAS_BORDER_COLORUR = 'black';
-        const CANVAS_BACKGROUND_COLORUR = 'white';
+        const CANVAS_BORDER_COLOUR = 'black';
+        const CANVAS_BACKGROUND_COLOUR = 'white';
+
+        //Get the canvas element
+        var gameCanvas = document.getElementById("gameCanvas");
+
+        //Return a two dimensional drawing context
+        var cxt = gameCanvas.getContext("2d");
+
+        // Select the colour to fill in the canvas
+        ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
     </script>
 </body>
 
