Fixed some HTML spelling again

--- a/snake.html
+++ b/snake.html
@@ -12,8 +12,8 @@
     <canvas id="gameCanvas" width "300" height="300"></canvas>
     <script>
         /** CONSTANTS **/
-        const CANVAS_BORDER_COLOUR = 'black';
-        const CANVAS_BACKGROUND_COLOUR = 'white';
+        const CANVAS_BORDER_COLOR = 'black';
+        const CANVAS_BACKGROUND_COLOR = 'white';
 
         //Get the canvas element
         var gameCanvas = document.getElementById("gameCanvas");
@@ -21,8 +21,9 @@
         //Return a two dimensional drawing context
         var cxt = gameCanvas.getContext("2d");
 
-        // Select the colour to fill in the canvas
+        // Select the color to fill in the canvas
         ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
+        //Select the color for the border of the canvas
     </script>
 </body>
 
