--- a/snake.html
+++ b/snake.html
@@ -15,15 +15,21 @@
         const CANVAS_BORDER_COLOR = 'black';
         const CANVAS_BACKGROUND_COLOR = 'white';
 
-        //Get the canvas element
+        // Get the canvas element
         var gameCanvas = document.getElementById("gameCanvas");
 
-        //Return a two dimensional drawing context
+        // Return a two dimensional drawing context
         var cxt = gameCanvas.getContext("2d");
 
         // Select the color to fill in the canvas
         ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
         //Select the color for the border of the canvas
+        ctx.strokestyle = CANVAS_BORDER_COLOR;
+
+        // Draw a "filled" rectangle to covor the entire canvas
+        ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
+        // Draw a "border" around the entire canvas
+        cxt.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
     </script>
 </body>
 
