--- a/snake.html
+++ b/snake.html
@@ -30,6 +30,23 @@
         ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
         // Draw a "border" around the entire canvas
         ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
+
+        let Snake = [{
+            x: 150,
+            y: 150
+        }, {
+            x: 140,
+            y: 150
+        }, {
+            x: 130,
+            y: 150
+        }, {
+            x: 120,
+            y: 150
+        }, {
+            x: 110,
+            y: 150
+        }, ];
     </script>
 </body>
 
