--- a/snake.html
+++ b/snake.html
@@ -47,6 +47,18 @@
             x: 110,
             y: 150
         }, ];
+
+        function drawSnakePart(snakePart) {
+            ctx.fillStyle = 'lightgreen';
+            cxt.strokestyle = 'darkgreen';
+
+            cxt.fillRect(snakePart.x, snakePart.y, 10, 10);
+            cxt.strokeRect(snakePart.x, snakePart.y, 10, 10);
+        }
+
+        function drawSnake() {
+            snake.forEach(drawSnakePart);
+        }
     </script>
 </body>
 
