More JS debugging

--- a/snake.html
+++ b/snake.html
@@ -68,7 +68,7 @@
             ctx.fillStyle = SNAKE_COLOR;
 
             // Set the border color of the snake part
-            cxt.strokestyle = SNAKE_BORDER_COLOR;
+            ctx.strokestyle = SNAKE_BORDER_COLOR;
 
             // Draw a "filled" rectangle to represent the snake part at the coordinates
             // the part is located
