--- a/snake.html
+++ b/snake.html
@@ -6,14 +6,16 @@
 </head>
 
 <body>
-    <canvas id="gameCanvas" width "300" height="300"></canvas>
+    <canvas id="gameCanvas" width="300" height="300"></canvas>
+
+
 
     <script>
         /** CONSTANTS **/
-        const CANVAS_BORDER_COLOR = 'black';
-        const CANVAS_BACKGROUND_COLOR = 'white';
-        const SNAKE_COLOR = 'lightgreen';
-        const SNAKE_BORDER_COLOR = 'darkgreen';
+        const CANVAS_BORDER_COLOUR = 'black';
+        const CANVAS_BACKGROUND_COLOUR = 'white';
+        const SNAKE_COLOUR = 'lightgreen';
+        const SNAKE_BORDER_COLOUR = 'darkgreen';
 
         let Snake = [{
             x: 150,
@@ -39,10 +41,10 @@
         // Return a two dimensional drawing context
         var ctx = gameCanvas.getContext("2d");
 
-        // Select the color to fill in the canvas
-        ctx.fillStyle = CANVAS_BACKGROUND_COLOR;
-        // Select the color for the border of the canvas
-        ctx.strokestyle = CANVAS_BORDER_COLOR;
+        // Select the colour to fill in the canvas
+        ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
+        // Select the colour for the border of the canvas
+        ctx.strokestyle = CANVAS_BORDER_COLOUR;
 
         // Draw a "filled" rectangle to cover the entire canvas
         ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
@@ -55,7 +57,7 @@
          * Draws the snake on the canvas
          */
         function drawSnake() {
-            // Loops through the snake parts drawing each part on the canvas
+            // loop through the snake parts drawing each part on the canvas
             snake.forEach(drawSnakePart)
         }
 
@@ -64,11 +66,11 @@
          * @param { object } snakePart - The coordinates where the part should be drawn
          */
         function drawSnakePart(snakePart) {
-            // Set the color of the snake part
-            ctx.fillStyle = SNAKE_COLOR;
+            // Set the colour of the snake part
+            ctx.fillStyle = SNAKE_COLOUR;
 
-            // Set the border color of the snake part
-            ctx.strokestyle = SNAKE_BORDER_COLOR;
+            // Set the border colour of the snake part
+            ctx.strokestyle = SNAKE_BORDER_COLOUR;
 
             // Draw a "filled" rectangle to represent the snake part at the coordinates
             // the part is located
