Debugging, but not working...still

--- a/snake.html
+++ b/snake.html
@@ -13,7 +13,7 @@
     <script>
         /** CONSTANTS **/
         const CANVAS_BORDER_COLOUR = 'black';
-        const CANVAS_BACKGROUND_COLOUR = 'white';
+        const CANVAS_BACKGROUND_COLOUR = "white";
         const SNAKE_COLOUR = 'lightgreen';
         const SNAKE_BORDER_COLOUR = 'darkgreen';
 
