--- a/snake.html
+++ b/snake.html
@@ -77,6 +77,17 @@
             // Draws a border around the snake part
             ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
         }
+
+        function advanceSnake() {
+            const head = {
+                x: snake[0].x + dx,
+                y: snake[0].y
+            };
+
+            snake.unshift(head);
+
+            snake.pop();
+        }
     </script>
 </body>
 
