--- a/snake.html
+++ b/snake.html
@@ -32,6 +32,11 @@
             y: 150
         }]
 
+        // Horizontal velocity
+        let dx = 10;
+        // Vertical velocity
+        let dy = 0;
+
 
         // Gets the canvas element
         var gameCanvas = document.getElementById("gameCanvas");
@@ -49,7 +54,31 @@
         // Draws a "border" around the entire canvas
         ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
 
+
+        // Moves one step to the right
+        advanceSnake()
+            // Changes vertical velocity to 0
+        dx = 0;
+        // Changes horizontal velocity to 10
+        dy = -10;
+        // Moves one step up
+        advanceSnake();
+        // Draws snake on the canvas
         drawSnake();
+
+        /**
+         * Advances the snake by changing the x-coordinates of its parts
+         * according to the horizontal velocity and the y-coordinates of its parts
+         * according to the vertical velocity
+         */
+        function advanceSnake() {
+            const head = {
+                x: snake[0].x + dx,
+                y: snake[0].y + dy
+            };
+            snake.unshift(head);
+            snake.pop();
+        }
 
         /**
          * Draws the snake on the canvas
@@ -76,17 +105,6 @@
 
             // Draws a border around the snake part
             ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
-        }
-
-        function advanceSnake() {
-            const head = {
-                x: snake[0].x + dx,
-                y: snake[0].y
-            };
-
-            snake.unshift(head);
-
-            snake.pop();
         }
     </script>
 </body>
