--- a/snake.html
+++ b/snake.html
@@ -49,14 +49,11 @@
         // Selects the color for the border of the canvas
         ctx.strokestyle = CANVAS_BORDER_COLOR;
 
+        // Draws a "filled" rectangle to cover the entire canvas
+        ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
+        // Draws a "border" around the entire canvas
+        ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
 
-        function clearCanvas() {
-            ctx.fillStyle = 'white';
-            ctx.strokestyle = 'black';
-
-            ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
-            ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
-        }
 
         // Moves one step to the right
         advanceSnake()
@@ -108,6 +105,14 @@
 
             // Draws a border around the snake part
             ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
+        }
+
+        function clearCanvas() {
+            ctx.fillStyle = 'white';
+            ctx.strokestyle = 'black';
+
+            ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
+            ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
         }
     </script>
 </body>
