--- a/snake.html
+++ b/snake.html
@@ -114,6 +114,41 @@
             ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
             ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
         }
+
+
+        stepOne();
+
+        function stepOne() {
+            setTimeout(function onTick() {
+                clearCanvas();
+                advanceSnake();
+                drawSnake();
+                // Call the second function
+                stepTwo();
+            }, 100)
+        }
+
+        function stepTwo() {
+            setTimeout(function onTick() {
+                clearCanvas();
+                advanceSnake();
+                drawSnake();
+                // Call the third function
+                stepThree();
+            }, 100)
+        }
+        drawSnake();
+
+
+        function main() {
+            setTimeout(function onTick() {
+                clearCanvas();
+                advanceSnake();
+                drawSnake();
+                // Call main again
+                main();
+            }, 100)
+        }
     </script>
 </body>
 
