--- a/snake.html
+++ b/snake.html
@@ -183,6 +183,8 @@
                 dy = 10;
             }
         }
+
+        document.addEventListener("keydown", changeDirection)
     </script>
 </body>
 
