--- a/snake.html
+++ b/snake.html
@@ -185,6 +185,21 @@
         }
 
         document.addEventListener("keydown", changeDirection)
+
+        function randomTen(min, max) {
+            return Math.round((Math.random() * (max - min) + min) / 10) * 10;
+        }
+
+        function createFood() {
+            foodX = randomTen(0, gameCanvas.width - 10);
+            foodY = randomTen(0, gameCanvas.height - 10);
+
+            snake.forEach(function isFoodOnSnake(part) {
+                const foooIsOnSnake = part.x == foodX && part.y == foodY
+                if (foodIsOnSnake)
+                    createFood();
+            });
+        }
     </script>
 </body>
 
