Moved createFood funct, and added to main fnct

--- a/snake.html
+++ b/snake.html
@@ -140,9 +140,21 @@
         drawSnake();
 
 
+        function createFood() {
+            foodX = randomTen(0, gameCanvas.width - 10);
+            foodY = randomTen(0, gameCanvas.height - 10);
+
+            snake.forEach(function isFoodOnSnake(part) {
+                const foooIsOnSnake = part.x == foodX && part.y == foodY
+                if (foodIsOnSnake)
+                    createFood();
+            });
+        }
+
         function main() {
             setTimeout(function onTick() {
                 clearCanvas();
+                drawFood();
                 advanceSnake();
                 drawSnake();
                 // Call main again
@@ -190,16 +202,7 @@
             return Math.round((Math.random() * (max - min) + min) / 10) * 10;
         }
 
-        function createFood() {
-            foodX = randomTen(0, gameCanvas.width - 10);
-            foodY = randomTen(0, gameCanvas.height - 10);
 
-            snake.forEach(function isFoodOnSnake(part) {
-                const foooIsOnSnake = part.x == foodX && part.y == foodY
-                if (foodIsOnSnake)
-                    createFood();
-            });
-        }
 
         function drawFood() {
             ctx.fillStyle = 'red';
