Changed advanceSnake function more

--- a/snake.html
+++ b/snake.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <div id="score">0</div>
     <canvas id="gameCanvas" width="300" height="300"></canvas>
 
     <script>
@@ -220,11 +221,16 @@
 
             const didEatFood = snake[0].x === foodX && snake[0].y === foodY;
             if (didEatFood) {
+                score += 10;
+                document.getElementById('score').innerHTML = score;
+
                 createFood();
             } else {
                 snake.pop();
             }
         }
+
+        let score = 0;
     </script>
 </body>
 
