--- a/snake.html
+++ b/snake.html
@@ -217,6 +217,7 @@
                 x: snake[0].x + dx,
                 y: snake[0].y
             };
+
             snake.unshift(head);
 
             const didEatFood = snake[0].x === foodX && snake[0].y === foodY;
@@ -231,6 +232,23 @@
         }
 
         let score = 0;
+
+        function didGameEnd() {
+            for (let i = 4; i < snake.length; i++) {
+                const didCollide = snake[i].x === snake[0].x && snake[i].y === snake[0].y
+                if (didCollide) return true
+            }
+
+            const hitLeftWall = snake[0].x < 0;
+            const hitRightWall = snake[0].x > gameCanvas.width - 10;
+            const hitTopWall = snake[0].y < 0;
+            const hitBottomWall = snake[0].y > gameCanvas.height - 10;
+
+            return hitLeftWall ||
+                hitRightWall ||
+                hitTopWall ||
+                hitBottomWall ||
+        }
     </script>
 </body>
 
