Changed main function

--- a/snake.html
+++ b/snake.html
@@ -153,6 +153,7 @@
         }
 
         function main() {
+            if (didGameEnd()) return;
             setTimeout(function onTick() {
                 clearCanvas();
                 drawFood();
