Added some constants

--- a/snake.html
+++ b/snake.html
@@ -15,6 +15,10 @@
         const CANVAS_BACKGROUND_COLOR = 'white';
         const SNAKE_COLOR = 'lightgreen';
         const SNAKE_BORDER_COLOR = 'darkgreen';
+        const FOOD_COLOR = 'red';
+        const FOOD_BORDER_COLOR = 'darkred';
+
+
 
         let snake = [{
             x: 150,
