--- a/snake.html
+++ b/snake.html
@@ -64,17 +64,36 @@
         document.addEventListener("keydown", changeDirection);
 
         function main() {
+
             if (didGameEnd()) return;
+
             setTimeout(function onTick() {
                 clearCanvas();
                 drawFood();
                 advanceSnake();
                 drawSnake();
+
                 // Call main again
                 main();
             }, 100)
         }
 
+        /**
+         * Change the background color of the canvas to CANVAS_BACKGROUND_COLOR and
+         * draw a border around it
+         */
+
+        function clearCanvas() {
+            // Selects the color to fill the drawing
+            ctx.fillStyle = CANVAS_BACKGROUND_COLOR;
+            // Selects the color for the border of the canvas
+            ctx.strokestyle = CANVAS_BORDER_COLOR;
+
+            // Draws a "filled" rectangle to cover the entire canvas
+            ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
+            // Draws a "border" around the entire canvas
+            ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
+        }
 
 
 
@@ -133,13 +152,7 @@
             ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
         }
 
-        function clearCanvas() {
-            ctx.fillStyle = 'white';
-            ctx.strokestyle = 'black';
 
-            ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
-            ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
-        }
 
 
         stepOne();
