--- a/snake.html
+++ b/snake.html
@@ -82,7 +82,6 @@
          * Change the background color of the canvas to CANVAS_BACKGROUND_COLOR and
          * draw a border around it
          */
-
         function clearCanvas() {
             // Selects the color to fill the drawing
             ctx.fillStyle = CANVAS_BACKGROUND_COLOR;
@@ -95,8 +94,58 @@
             ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
         }
 
+        /**
+         * Returns 'true' if the head of the snake touched another part of the game
+         * or any of the walls
+         */
+        function didGameEnd() {
+            for (let i = 4; i < snake.length; i++) {
+                const didCollide = snake[i].x === snake[0].x && snake[i].y === snake[0].y
+                if (didCollide) return true
+            }
 
+            const hitLeftWall = snake[0].x < 0;
+            const hitRightWall = snake[0].x > gameCanvas.width - 10;
+            const hitTopWall = snake[0].y < 0;
+            const hitBottomWall = snake[0].y > gameCanvas.height - 10;
 
+            return hitLeftWall || hitRightWall || hitTopWall || hitBottomWall
+        }
+
+        /**
+         * Draws the food on the canvas
+         */
+        function drawFood() {
+            ctx.fillStyle = FOOD_COLOR;
+            ctx.strokestyle = FOOD_BORDER_COLOR;
+            ctx.fillRect(foodX, foodY, 10, 10);
+            ctx.strokeRect(foodX, foodY, 10, 10);
+        }
+
+        /**
+         * Advances the snake by changing the x-coordinates of its parts
+         * according to the horizontal velocity and the y-coordinates of its parts
+         * according to the vertical velocity
+         */
+
+        function advanceSnake() {
+            const head {
+                x: snake[0].x + dx,
+                y: snake[0].y
+            };
+
+            snake.unshift(head);
+
+            const didEatFood = snake[0].x === foodX && snake[0].y === foodY;
+            if (didEatFood) {
+                score += 10;
+                document.getElementById('score').innerHTML = score;
+
+                createFood();
+            } else {
+                snake.pop();
+            }
+        }
 
 
 
@@ -111,11 +160,7 @@
         // Draws snake on the canvas
         drawSnake();
 
-        /**
-         * Advances the snake by changing the x-coordinates of its parts
-         * according to the horizontal velocity and the y-coordinates of its parts
-         * according to the vertical velocity
-         */
+
         function advanceSnake() {
             const head = {
                 x: snake[0].x + dx,
@@ -232,52 +277,7 @@
             return Math.round((Math.random() * (max - min) + min) / 10) * 10;
         }
 
-        function drawFood() {
-            ctx.fillStyle = 'red';
-            ctx.strokestyle = 'darkred';
-            ctx.fillRect(foodX, foodY, 10, 10);
-            ctx.strokeRect(foodX, foodY, 10, 10);
-        }
-
-
-
-        function advanceSnake() {
-            const head {
-                x: snake[0].x + dx,
-                y: snake[0].y
-            };
-
-            snake.unshift(head);
-
-            const didEatFood = snake[0].x === foodX && snake[0].y === foodY;
-            if (didEatFood) {
-                score += 10;
-                document.getElementById('score').innerHTML = score;
-
-                createFood();
-            } else {
-                snake.pop();
-            }
-        }
-
         let score = 0;
-
-        function didGameEnd() {
-            for (let i = 4; i < snake.length; i++) {
-                const didCollide = snake[i].x === snake[0].x && snake[i].y === snake[0].y
-                if (didCollide) return true
-            }
-
-            const hitLeftWall = snake[0].x < 0;
-            const hitRightWall = snake[0].x > gameCanvas.width - 10;
-            const hitTopWall = snake[0].y < 0;
-            const hitBottomWall = snake[0].y > gameCanvas.height - 10;
-
-            return hitLeftWall ||
-                hitRightWall ||
-                hitTopWall ||
-                hitBottomWall ||
-        }
     </script>
 </body>
 
