--- a/snake.html
+++ b/snake.html
@@ -191,75 +191,22 @@
         function drawSnakePart(snakePart) {
             // Sets the color of the snake part
             ctx.fillStyle = SNAKE_COLOR;
-
             // Sets the border color of the snake part
             ctx.strokestyle = SNAKE_BORDER_COLOR;
-
             // Draws a "filled" rectangle to represent the snake part at the coordinates
-            //the part is located
+            // where the part is located
             ctx.fillRect(snakePart.x, snakePart.y, 10, 10);
-
             // Draws a border around the snake part
             ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
         }
 
-
-
-
-
-
-
-
-        // Moves one step to the right
-        advanceSnake()
-            // Changes vertical velocity to 0
-        dx = 0;
-        // Changes horizontal velocity to 10
-        dy = -10;
-        // Moves one step up
-        advanceSnake();
-        // Draws snake on the canvas
-        drawSnake();
-
-
-        function advanceSnake() {
-            const head = {
-                x: snake[0].x + dx,
-                y: snake[0].y + dy
-            };
-            snake.unshift(head);
-            snake.pop();
-        }
-
-
-
-
-
-
-
-
-        stepOne();
-
-        function stepOne() {
-            setTimeout(function onTick() {
-                clearCanvas();
-                advanceSnake();
-                drawSnake();
-                // Call the second function
-                stepTwo();
-            }, 100)
-        }
-
-        function stepTwo() {
-            setTimeout(function onTick() {
-                clearCanvas();
-                advanceSnake();
-                drawSnake();
-                // Call the third function
-                stepThree();
-            }, 100)
-        }
-        drawSnake();
+        /**
+         * Changes the vertical and horizontal velocity of the snake according to the
+         * key that was pressed
+         * The direction cannot be switched to the opposite direction, to prevent the snake from reversing
+         * for example, if the direction is 'right', it cannot become 'left'
+         * @param { object } event - the keydown event
+         */
 
         function changeDirection(event) {
             const LEFT_KEY = 37;
@@ -268,6 +215,7 @@
             const DOWN_KEY = 40;
 
             const keyPressed = event.keyCode;
+
             const goingUp = dy === -10;
             const goingDown = dy === 10;
             const goingRight = dx === 10;
@@ -293,10 +241,6 @@
                 dy = 10;
             }
         }
-
-        document.addEventListener("keydown", changeDirection)
-
-        let score = 0;
     </script>
 </body>
 
