Should be ready to debug

--- a/snake.html
+++ b/snake.html
@@ -226,7 +226,7 @@
                 dy = 0;
             }
 
-            if (keyPressed === UP_KEY && !goingLeft) {
+            if (keyPressed === UP_KEY && !goingDown) {
                 dx = 0;
                 dy = -10;
             }
@@ -236,7 +236,7 @@
                 dy = 0;
             }
 
-            if (keyPressed === DOWN_KEY && !goingDown) {
+            if (keyPressed === DOWN_KEY && !goingUp) {
                 dx = 0;
                 dy = 10;
             }
