--- a/snake.html
+++ b/snake.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Ride the Snake (AKA: The West is the Best)</title>
+    <link href="https://fonts.googleapis.com/css?family=Antic+Slab" rel="stylesheet">
 </head>
 
 <body>
