--- a/snake.html
+++ b/snake.html
@@ -4,25 +4,15 @@
 <head>
     <title>Ride the Snake (AKA: The West is the Best)</title>
     <link href="https://fonts.googleapis.com/css?family=Antic+Slab" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="snake.css">
+
 </head>
 
 <body>
     <div id="score">0</div>
     <canvas id="gameCanvas" width="300" height="300"></canvas>
-    <style>
-        #gameCanvas {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        
-        #score {
-            text-align: center;
-            font-size: 140px;
-            font-family: 'Antic Slab', serif;
-        }
-    </style>
+
     <script>
         /** CONSTANTS **/
         const CANVAS_BORDER_COLOR = 'black';
