--- a/snake.html
+++ b/snake.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>Ride the Snake (AKA: The West is the Best)</title>
-    <link href="https://fonts.googleapis.com/css?family=Antic+Slab" rel="stylesheet">
+    <title>Ride the Snake</title>
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="snake.css">
 
 </head>
