--- a/snake.html
+++ b/snake.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <h1>Ride the Snake</h1>
-    <h2>(AKA: The West is the Best)</h2>
+    <h1>Snake Game
+    </h1>
     <div id="score">0</div>
     <canvas id="gameCanvas" width="300" height="300"></canvas>
     <script src="snake.js"></script>
