--- a/snake.html
+++ b/snake.html
@@ -19,6 +19,10 @@
     </h1>
     <div id="score">0</div>
     <canvas id="gameCanvas" width="300" height="300"></canvas>
+    <button onclick="myFunction()">Up</button>
+
+    <p id="up"></p>
+
     <script src="snake.js"></script>
 </body>
 
