Added arrow buttons

--- a/snake.html
+++ b/snake.html
@@ -18,10 +18,12 @@
     <h1>Snake Game
     </h1>
     <div id="score">0</div>
-    <button onclick="myFunction()">Up</button>
-
-    <p id="up"></p>
     <canvas id="gameCanvas" width="300" height="300"></canvas>
+
+    <button><i class="up"></i></button>
+    <button><i class="down"></i></button>
+    <button><i class="left"></i></button>
+    <button><i class="right"></i></button>
 
     <script src="snake.js"></script>
 </body>
