--- a/snake.html
+++ b/snake.html
@@ -20,10 +20,12 @@
     <div id="score">0</div>
     <canvas id="gameCanvas" width="300" height="300"></canvas>
 
-    <button><i class="up"></i></button>
-    <button><i class="down"></i></button>
-    <button><i class="left"></i></button>
-    <button><i class="right"></i></button>
+    <div>
+        <button><i class="up"></i></button>
+        <button><i class="down"></i></button>
+        <button><i class="left"></i></button>
+        <button><i class="right"></i></button>
+    </div>
 
     <script src="snake.js"></script>
 </body>
