--- a/snake.html
+++ b/snake.html
@@ -20,7 +20,7 @@
     <div id="score">0</div>
     <canvas id="gameCanvas" width="300" height="300"></canvas>
 
-    <div>
+    <div class="buttons">
         <button><i class="up"></i></button>
         <button><i class="down"></i></button>
         <button><i class="left"></i></button>
