Updated all files

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <div id="score">0</div>
     <canvas id="gameCanvas" width="300" height="300"></canvas>
 
-    <div class="buttons">
+    <!-- <div class="buttons">
         <button><i class="up"></i></button>
         <button><i class="down"></i></button>
         <button><i class="left"></i></button>
         <button><i class="right"></i></button>
-    </div>
+    </div> -->
 
     <script src="snake.js"></script>
 </body>
