Updated HTML and CSS

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 <body>
     <h1>Snake Game
     </h1>
+    <br>
+    <h2>Score: </h2>
     <div id="score">0</div>
-    <canvas id="gameCanvas" width="300" height="300"></canvas>
+    <canvas id="gameCanvas" width="320" height="320"></canvas>
+
 
     <!-- <div class="buttons">
         <button><i class="up"></i></button>
@@ -26,6 +29,12 @@
         <button><i class="left"></i></button>
         <button><i class="right"></i></button>
     </div> -->
+
+    <div class="buttons">
+        Instructions: To move up, down, left, or right, use the navigation buttons on your keyboard.
+    </div>
+
+
 
     <script src="snake.js"></script>
 </body>
