--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <button><i class="right"></i></button>
     </div> -->
 
-    <div class="buttons">
+    <!-- <div class="buttons">
         Instructions: To move up, down, left, or right, use the navigation buttons on your keyboard.
-    </div>
+    </div> -->
 
 
 
