Changed positioning of h tags and canvas

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 <body>
     <h1>Snake Game
     </h1>
-    <h2>Score: </h2>
-    <div id="score">0</div>
+    <div>
+        <h2>Score: </h2>
+        <div id="score">0</div>
+    </div>
+
     <canvas id="gameCanvas" width="300" height="300"></canvas>
 
 
