Updated locations of elements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </h1>
     <div>
         <h2>Score: </h2>
-        <div id="score">0</div>
+
+        <b><div id="score">0</div></b>
     </div>
 
     <canvas id="gameCanvas" width="300" height="300"></canvas>
